--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -7,83 +7,9 @@
 						Register
 					</h4>
 				</div>
-				<form dir="rtl" (submit)="onSubmitRegisterForm(f)" #f="ngForm">
-					<div class="form-row">
-						<div class="col-4">
-							<label for="fname">نام</label>
-							<input
-								type="text"
-								name="fname"
-								class="form-control"
-								placeholder="First name"
-								ngModel
-								#fname="ngModel"
-								required
-								minlength="3"
-							/>
-							<div *ngIf="checkFiled(fname)" class="alert alert-danger mt-1">{{ fname.errors }}</div>
-						</div>
-						<div class="col-8">
-							<label for="lname">نام خانوادگی</label>
-							<input type="text" name="lname" class="form-control" placeholder="Last name" required />
-							<div class="alert alert-danger mt-1">
-								{{ errors }}
-							</div>
-						</div>
-					</div>
-					<div class="form-row">
-						<div class="col-6">
-							<label for="email">پست الکترونیک</label>
-							<input type="text" class="form-control" name="email" placeholder="email" ngModel required />
-							<div class="alert alert-danger mt-1"></div>
-						</div>
-					</div>
-					<div class="form-row">
-						<div class="col-6">
-							<label for="userName">نام کاربری</label>
-							<input
-								type="text"
-								class="form-control"
-								name="userName"
-								placeholder="user name"
-								ngModel
-								required
-							/>
-							<div class="alert alert-danger mt-1"></div>
-						</div>
-					</div>
-					<div class="form-row">
-						<div class="col-6">
-							<label for="password">رمز عبور</label>
-							<input
-								type="password"
-								class="form-control"
-								name="password"
-								placeholder="password"
-								ngModel
-								required
-							/>
-							<div class="alert alert-danger mt-1"></div>
-						</div>
-					</div>
-					<div class="form-row">
-						<div class="col-6">
-							<label for="confirmPassword">تکرار رمزعبور</label>
-							<input
-								type="password"
-								class="form-control"
-								name="confirmPassword"
-								placeholder="confirm password"
-								ngModel
-								required
-							/>
-							<div class="alert alert-danger mt-1"></div>
-						</div>
-					</div>
-					<div class="form-row pt-2">
-						<button type="submit" class="btn btn-primary m-2">ثبت نام</button>
-						<button type="reset" class="btn btn-danger m-2">مجدد</button>
-					</div>
+				<form dir="rtl" [formGroup]="form" (ngSubmit)="ngSubmit()">
+					<formly-form [form]="form" [model]="model" [fields]="fields"></formly-form>
+					<button class="btn btn-primary" type="submit">register</button>
 				</form>
 			</div>
 		</div>
